[metadata]
name = qwak
version = 0.0.1
author = Jaime Santos
author_email = jaimepereirasantos123@gmail.com
description = CTQW simulation software.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qwchagas/qwak
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = core
packages = find:
python_requires = >=3.6

[options.packages.find]
where = core
include = qwak, utils, qwak_cupy